create simple tests for DB